[package]
name = "yuko-cli"
version = "0.1.0"
authors = ["Andrew Vy <andrew@andrewvy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
config = "0.9.3"
serde = "1.0.98"
serde_derive = "1.0.98"
shellexpand = "1.0.0"
reqwest = "0.9.19"
serde_json = "1.0.40"
